crates/tests/other-db-tests/src/postgres/snapshots/other_db_tests__postgres__query_tests__aggregation__aggregate_count_albums_plus_field.snap
---
source: crates/tests/other-db-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "aggregates": {
      "how_many_albums": 347,
      "how_many_artist_ids": 347,
      "how_many_distinct_artist_ids": 204,
      "min_artist_id": 1,
      "max_artist_id": 275,
      "avg_artist_id": 121.94236311239193
    },
    "rows": [
      {
        "Title": "Let There Be Rock"
      },
      {
        "Title": "Big Ones"
      },
      {
        "Title": "Jagged Little Pill"
      },
      {
        "Title": "Facelift"
      },
      {
        "Title": "Warner 25 Anos"
      }
    ]
  }
]
